tests/security/taintThroughChildConstructorCallingGrandParentMethod/output.txt
ERROR: TaintedData - input.hack:20:10 - Data from a URL query string found its way to an HTML tag